--- a/chevereto/chevereto-service.yaml
+++ b/chevereto/chevereto-service.yaml
@@ -5,9 +5,10 @@ metadata:
     app: chevereto
   name: chevereto
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 80
+    nodePort: 32100
   selector:
     app: chevereto
 
