--- a/chevereto/db-deployment.yaml
+++ b/chevereto/db-deployment.yaml
@@ -26,8 +26,33 @@ spec:
           value: chevereto_root
         - name: MYSQL_USER
           value: chevereto
-        image: mariadb
+        image: mariadb:10.5.8
         name: db
+        imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "500m"
+          limits:
+            memory: "512Mi"
+            cpu: "1"
+        securityContext:
+          readOnlyRootFilesystem: false
+          runAsUser: 23998
+          runAsGroup: 32999
+        livenessProbe:
+          exec:
+            command: ["mysqladmin", "ping"]
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+        readinessProbe:
+          exec:
+            # Check we can execute queries over TCP (skip-networking is off).
+            command: ["mysql", "-h", "127.0.0.1", "-u", "chevereto", "-pchevereto", "-e", "SELECT 1"]
+          initialDelaySeconds: 5
+          periodSeconds: 2
+          timeoutSeconds: 1
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: chevereto-db
