--- a/chevereto/chevereto-service.yaml
+++ b/chevereto/chevereto-service.yaml
@@ -5,10 +5,9 @@ metadata:
     app: chevereto
   name: chevereto
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 80
-    nodePort: 32100
   selector:
     app: chevereto
 
