--- a/chevereto/db-deployment.yaml
+++ b/chevereto/db-deployment.yaml
@@ -40,6 +40,7 @@ spec:
           readOnlyRootFilesystem: false
           runAsUser: 23998
           runAsGroup: 32999
+          allowPrivilegeEscalation: false
         livenessProbe:
           exec:
             command: ["mysqladmin", "ping"]
