fix volume user problem for /images/

--- a/chevereto/overlays/prod/chevereto-deployment_patch.yaml
+++ b/chevereto/overlays/prod/chevereto-deployment_patch.yaml
@@ -8,6 +8,8 @@ spec:
       app: chevereto
   template:
     spec:
+      securityContext:
+        fsGroup: 33
       containers:
       - image: nmtan/chevereto
         name: chevereto
